crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-cte_materialization_tpcds_q9_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q9"
---
+-----------+------------+------------+------------+------------+
| bucket1   | bucket2    | bucket3    | bucket4    | bucket5    |
+-----------+------------+------------+------------+------------+
| 39.733749 | 115.430837 | 191.165994 | 267.061985 | 342.903689 |
+-----------+------------+------------+------------+------------+
