crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-distributed_tpch_q13.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q13"
---
+---------+----------+
| c_count | custdist |
+---------+----------+
| 0       | 50005    |
| 9       | 6641     |
| 10      | 6532     |
| 11      | 6014     |
| 8       | 5937     |
| 12      | 5639     |
| 13      | 5024     |
| 19      | 4793     |
| 7       | 4687     |
| 17      | 4587     |
+---------+----------+
