crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]-partitioned_tpch_q11.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q11"
---
+------------+-------------+
| ps_partkey | value       |
+------------+-------------+
| 129760     | 17538456.86 |
| 166726     | 16503353.92 |
| 191287     | 16474801.97 |
| 161758     | 16101755.54 |
| 34452      | 15983844.72 |
| 139035     | 15907078.34 |
| 9403       | 15451755.62 |
| 154358     | 15212937.88 |
| 38823      | 15064802.86 |
| 85606      | 15053957.15 |
+------------+-------------+
