crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]_tpcds_q10_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q10"
---
+-----------+-------------------+---------------------+------+----------------------+------+------------------+------+--------------+------+-----------------------+------+----------------------+------+
| cd_gender | cd_marital_status | cd_education_status | cnt1 | cd_purchase_estimate | cnt2 | cd_credit_rating | cnt3 | cd_dep_count | cnt4 | cd_dep_employed_count | cnt5 | cd_dep_college_count | cnt6 |
+-----------+-------------------+---------------------+------+----------------------+------+------------------+------+--------------+------+-----------------------+------+----------------------+------+
| F         | D                 | 2 yr Degree         | 1    | 500                  | 1    | Good             | 1    | 4            | 1    | 4                     | 1    | 5                    | 1    |
| F         | D                 | 2 yr Degree         | 1    | 500                  | 1    | Low Risk         | 1    | 1            | 1    | 5                     | 1    | 2                    | 1    |
| F         | D                 | 2 yr Degree         | 1    | 500                  | 1    | Low Risk         | 1    | 3            | 1    | 4                     | 1    | 6                    | 1    |
| F         | D                 | 2 yr Degree         | 1    | 1000                 | 1    | High Risk        | 1    | 5            | 1    | 6                     | 1    | 0                    | 1    |
| F         | D                 | 2 yr Degree         | 1    | 1000                 | 1    | Unknown          | 1    | 6            | 1    | 3                     | 1    | 1                    | 1    |
| F         | D                 | 2 yr Degree         | 1    | 1500                 | 1    | Good             | 1    | 5            | 1    | 4                     | 1    | 4                    | 1    |
| F         | D                 | 2 yr Degree         | 1    | 1500                 | 1    | Low Risk         | 1    | 0            | 1    | 6                     | 1    | 2                    | 1    |
| F         | D                 | 2 yr Degree         | 1    | 1500                 | 1    | Unknown          | 1    | 1            | 1    | 3                     | 1    | 4                    | 1    |
| F         | D                 | 2 yr Degree         | 1    | 1500                 | 1    | Unknown          | 1    | 1            | 1    | 4                     | 1    | 5                    | 1    |
| F         | D                 | 2 yr Degree         | 1    | 1500                 | 1    | Unknown          | 1    | 1            | 1    | 4                     | 1    | 6                    | 1    |
+-----------+-------------------+---------------------+------+----------------------+------+------------------+------+--------------+------+-----------------------+------+----------------------+------+
