crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]_tpcds_q12_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q12"
---
+------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+---------+-----------------+-------------+--------------+
| i_item_id        | i_item_desc                                                                                                                                                                                        | i_category | i_class | i_current_price | itemrevenue | revenueratio |
+------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+---------+-----------------+-------------+--------------+
| AAAAAAAAAAHADAAA | Young, big tickets will work always police. Now fixed eyes may believe there so amazing others. Trials take so really effective places. Here civil meanings should achieve functions. Much appare  | Books      | arts    | 9.77            | 14071.03    | 0.122320     |
| AAAAAAAAAANEAAAA | Pieces will not identify very very supposed interests. Subtle, other judges shall train formal, other officials. Forward important images might steal serious, above numbers. Acutely impressive g | Books      | arts    | 6.50            | 9012.95     | 0.078350     |
| AAAAAAAAABEDAAAA | Legitimate, visual applications install preliminary processes. Old patterns impress really economic, careful hopes; further extreme things believe political, other                                | Books      | arts    | 1.52            | 649.86      | 0.005649     |
| AAAAAAAAABFDBAAA | Much suspicious minutes may not think so decades; due users will take very among a shelves. Stiffly great circumsta                                                                                | Books      | arts    | 2.34            | 15814.53    | 0.137476     |
| AAAAAAAAABIGCAAA | Local, general contracts will not achieve as later accused democrats. Fully successful years would not take others. Specific, stable weeks will not play too blue roses; intently star years       | Books      | arts    | 2.69            | 13165.47    | 0.114448     |
| AAAAAAAAABMCBAAA | Likely, famous years shall answer never virtually interesting successes. Contacts become delicate aspects. Parental, close dr                                                                      | Books      | arts    | 2.84            | 29724.23    | 0.258394     |
| AAAAAAAAABOFAAAA | Principal, small customs ought to transfer more. Powerful scores reach decisions. Positive minutes know most. Then dark countries could know loca                                                  | Books      | arts    | 3.41            | 8288.84     | 0.072055     |
| AAAAAAAAACBLAAAA | Strange countries                                                                                                                                                                                  | Books      | arts    | 1.88            | 40812.43    | 0.354784     |
| AAAAAAAAACFHCAAA | British, christian differences will make. Slow, beautiful games tell above processes. Prime, different pubs blow hitherto cruel charts. Large, male sides may raise more just aware window         | Books      | arts    | 9.04            | 17746.70    | 0.154272     |
| AAAAAAAAACMEBAAA | Recent, expensive patients would explain just ordinary arts. New, unknown benefits would want elsewhere standard tiles. New, red appearances rest perhaps. Royal problems make careless            | Books      | arts    | 1.12            | 13757.02    | 0.119590     |
+------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+---------+-----------------+-------------+--------------+
