crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]_tpcds_q13_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q13"
---
+------------------------------+-------------------------------------+----------------------------------------+----------------------------------------+
| avg(store_sales.ss_quantity) | avg(store_sales.ss_ext_sales_price) | avg(store_sales.ss_ext_wholesale_cost) | sum(store_sales.ss_ext_wholesale_cost) |
+------------------------------+-------------------------------------+----------------------------------------+----------------------------------------+
| 32.138242894056845           | 2421.6727002583975                  | 2188.7447089262614                     | 1691899.66                             |
+------------------------------+-------------------------------------+----------------------------------------+----------------------------------------+
