crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]_tpcds_q15_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q15"
---
+--------+-----------------------------------+
| ca_zip | sum(catalog_sales.cs_sales_price) |
+--------+-----------------------------------+
| 30001  | 2589.05                           |
| 30008  | 3901.20                           |
| 30026  | 2435.01                           |
| 30059  | 90677.79                          |
| 30069  | 93514.40                          |
| 30116  | 5251.95                           |
| 30125  | 4039.57                           |
| 30141  | 7249.33                           |
| 30149  | 738.47                            |
| 30150  | 83048.22                          |
+--------+-----------------------------------+
